# beam_data_gen

./: CMakeLists.txt  package.xml  setup.py
data/beam_losses/: beam_loss.npy
model_params/base_encoder/vae_4/: vae_epoch_10000.pt
model_params/beam_robot/vae_13/: vae_epoch_3500.pt
resources/configs/: robot_and_beams.xml  robot_and_square.xml  three_beams.xml
resources/training/: train_params.yaml  vae_params.yaml
resources/vae_params/: indep_class.yaml  train_params.yaml  vae_params.yaml
scripts/: aicon_dual_assembly.py  aicon_graph.py  aicon_robot.py  am_beams.py  am_closed_loop.py  am_explore.py  am_graphs.py  am_robot_beams.py  am_square.py  bgbg_dual_assembly.py  inspect_latent_space.py  inspect_vae.py  latent_space_walk.py  plot_losses.py  plot_timings_ieee.py  sample_beam_configs.py  sample_pose.py  sample_robot_and_beam.py  sample_trajectories.py  train_beam_vae.py
scripts/archive/: am_closed_loop.py  am_optimisation.py  am_walk.py  inspect_vae.py  latent_space_walk.py  sample_beam_configs.py
src/beam_data_gen/: beam_sampler.py  data_saver.py
src/beam_data_gen/activation_maximisation/: beam_act_max.py
src/beam_data_gen/beam_impl/: L_beam.py  (+2 more)
test/: sample_pose.py  test_beam_act_max.py  test_beam_vae.py  test_dataloader.py  test_datasaver.py  test_dual_assembly.py  test_extract_trajectories.py  test_graph_ctrl.py  test_independent_class.py  test_p_ctrl.py  test_p_pregrasp.py  test_perturb_poses.py  test_robot_graph.py  test_sample_graphs.py  test_sdf.py  test_sdf_trimesh.py  test_space_classifier.py  test_square_graph.py  test_view_data.py
(+55 files in other folders)
