<?xml version="1.0"?>
<package format="3">
  <name>beam_data_gen</name>
  <version>6.2.0</version>
  <description>Beam assembly tools.</description>

  <maintainer email="mitch@robots.ox.ac.uk">Alexander Mitchell</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>networkx</exec_depend>
  
</package>